# docs/swagger.json
@@ -107,7 +107,7 @@
                     }
                 ],
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -115,7 +115,7 @@
                 "tags": [
                     "Restaurant"
                 ],
-                "summary": "Update restaurant",
+                "summary": "Update restaurant (multipart)",
                 "parameters": [
                     {
                         "type": "integer",
@@ -125,20 +125,53 @@
                         "required": true
                     },
                     {
-                        "description": "Restaurant info",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.Restaurant"
-                        }
+                        "type": "string",
+                        "description": "Name",
+                        "name": "name",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Description",
+                        "name": "description",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Location",
+                        "name": "location",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Cuisine",
+                        "name": "cuisine",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Avg price",
+                        "name": "avg_price",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "number",
+                        "description": "Rating",
+                        "name": "rating",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "New image",
+                        "name": "image",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/types.Restaurant"
                         }
                     },
                     "400": {
@@ -637,7 +670,7 @@
                     }
                 ],
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -645,7 +678,7 @@
                 "tags": [
                     "Menu"
                 ],
-                "summary": "Update menu item (name/price)",
+                "summary": "Update menu item (multipart)",
                 "parameters": [
                     {
                         "type": "integer",
@@ -655,18 +688,39 @@
                         "required": true
                     },
                     {
-                        "description": "Data",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.Menu"
-                        }
+                        "type": "string",
+                        "description": "Name",
+                        "name": "name",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "number",
+                        "description": "Price",
+                        "name": "price",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "New image",
+                        "name": "image",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.Menu"
+                        }
+                    },
+                    "400": {
+                        "description": "bad",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "fail",
                         "schema": {
                             "type": "string"
                         }
